Separate limits for fproxy maximum file size for when we are showing a progress bar vs when it's just an inline image or something so we can't.

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -1763,8 +1763,10 @@ SimpleToadletServer.panicButton=Show the panic button?
 SimpleToadletServer.panicButtonLong=Shows a 'panic button' on the queue page that will remove all downloads and uploads, wipe the cache of recently visited freesites, and clear the master keys file.
 SimpleToadletServer.noConfirmPanic=No confirmation on panic button?
 SimpleToadletServer.noConfirmPanicLong=If true, the panic button will not ask for confirmation but will act immediately.
-SimpleToadletServer.passthroughMaxSize=Maximum size for transparent pass-through in the web interface
-SimpleToadletServer.passthroughMaxSizeLong=Maximum size of a file for transparent pass-through in the web interface. For larger files, the web interface will ask you whether it should send the file to your browser or whether Freenet should download it to your downloads directory.
+SimpleToadletServer.passthroughMaxSize=Maximum size for transparent pass-through in the web interface where we cannot show progress (e.g. images)
+SimpleToadletServer.passthroughMaxSizeLong=Maximum size for images etc on the Freenet web interface. If an image, style sheet etc is larger than this threshold, it will fail, and if possible Freenet will show an error. This is to prevent your browser from waiting forever for a page full of enormous images.
+SimpleToadletServer.passthroughMaxSizeProgress=Maximum size for transparent pass-through in the web interface where we can show a progress bar (e.g. HTML pages)
+SimpleToadletServer.passthroughMaxSizeProgressLong=Maximum size of an HTML page or file, where Freenet can show a progress bar. If the file is larger than this it will ask you whether you want to download it in the background, e.g. to your downloads folder.
 SimpleToadletServer.port=Web interface port
 SimpleToadletServer.portLong=The TCP port the web interface should listen on
 SimpleToadletServer.publicGatewayMode=Public gateway mode? (Only applies to allowed but non-full-access connections)
