Improve announce-is-disabled warning to ask the user to turn on the updater if necessary.

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -5,7 +5,8 @@ Announcer.announceDetails=We have recently sent ${recentSentAnnouncements} annou
 Announcer.announceAlertNoSeednodes=There is no seednodes.fref file found, so your Freenet node will not be able to automatically bootstrap itself onto the opennet. Please add some nodes manually, or download the seednodes file from http://downloads.freenetproject.org/alpha/opennet/ .
 Announcer.announceLoading=Freenet is currently loading the seednodes file so that it can attempt to announce to the rest of the network. Announcement may take a few minutes.
 Announcer.announceDisabledTooOldTitle=Announcement disabled (too old)
-Announcer.announceDisabledTooOld=This node appears to be too old to connect to the current Freenet network. We have disabled announcement, since it is not getting anywhere. Please update your node as soon as possible (auto-updating may be waiting for input or it may be disabled).
+Announcer.announceDisabledTooOld=This node appears to be too old to connect to the current Freenet network. We have disabled announcement, since it is not getting anywhere.
+Announcer.announceDisabledTooOldUpdateDisabled=Please enable auto-update on the ${config}Configuration page${/config}.
 Announcer.announceDisabledTooOldShort=Your Freenet node has tried to connect to the network but your copy of Freenet is too old. You should upgrade.
 Announcer.announceAlertShort=Freenet is trying to connect to the network, it will be slow for a while.
 Announcer.coolingOff=For the next ${time} seconds, your Freenet node is waiting for the nodes that it just announced to to connect, if there are not enough nodes it will try a different node.
