Tell the user that an update is urgent if there are darknet peers with TOO NEW, or if announcement has been turned off.

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -2018,6 +2018,7 @@ UpdatedVersionAvailableUserAlert.title=A new stable version of Freenet is availa
 UpdatedVersionAvailableUserAlert.updateASAPButton=Update ASAP
 UpdatedVersionAvailableUserAlert.updateASAPQuestion=Would you like Freenet to automatically restart as soon as it has downloaded the update?
 UpdatedVersionAvailableUserAlert.updateNowButton=Update Now!
+UpdatedVersionAvailableUserAlert.updateIsUrgent=Please update soon, or your Freenet node may be left behind, unable to talk to the rest of the network!
 UserAlert.apply=Apply
 UserAlert.hide=Hide
 UserAlert.reset=Reset
