Show where we save a file to.

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -771,6 +771,7 @@ FileOffer.askUserTitle=Direct file transfer
 FileOffer.offeredFileHeader=The node ${name} has offered a file:
 FileOffer.offeredFileShort=Your friend ${node} has offered the file ${filename}.
 FileOffer.fileLabel=File:
+FileOffer.fileSavedToLabel=Saved to:
 FileOffer.senderLabel=Sender:
 FileOffer.commentLabel=Comment:
 FileOffer.mimeLabel=Content Type:
