Make slot filter write time configurable.

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -1131,6 +1131,9 @@ Node.storeBloomFilterCounting=Use counting bloom filter?
 Node.storeBloomFilterCountingLong=Use 2-bit counting bloom filter? (don't touch this unless you know what you are doing)
 Node.storeUseSlotFilters=Use slot filters? (Strongly recommended)
 Node.storeUseSlotFiltersLong=This greatly reduces disk I/O for the salted-hash store, at a memory and disk cost of around 4 bytes for every key i.e. 1/3000th of the store size. This is strongly recommended, unless your RAM is small and you have a fast SSD.
+Node.storeSaltHashSlotFilterPersistenceTime=Persistence interval for slot filters
+Node.storeSaltHashSlotFilterPersistenceTimeLong=How often should the slot filters be written for the store? -1 = write immediately. 0 = write at shutdown. >0 = write every n milliseconds. So e.g. 60000 = every minute.
+Node.slotFilterPersistenceTimeError=Slot filter persistence time must be -1, 0, or positive.
 Node.swapRInterval=Swap request send interval (ms)
 Node.swapRIntervalLong=Interval between swap attempting to send swap requests in milliseconds. Leave this alone!
 Node.throttleLocalTraffic=Throttle local traffic?
