Localise b237d9aba1b17b52b54d25fe9f7089dcae0c2b38

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -1401,6 +1401,7 @@ PproxyToadlet.pluginGroup.file-transfer=File Transfer
 PproxyToadlet.pluginGroup.index=Indexing
 PproxyToadlet.pluginGroup.technical=Technical
 PproxyToadlet.pluginGroupTitle=${pluginGroup} Plugins
+PproxyToadlet.pluginVersion=version
 PproxyToadlet.pluginNotFoundReload=The specified plugin could not be located in order to reload it.
 PproxyToadlet.pluginNotFoundReloadTitle=Plugin Not Found (reloading)
 PproxyToadlet.pluginNotFoundUpdatingTitle=Plugin Not Found (updating)
