--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -817,6 +817,7 @@ InsertContext.CompatibilityMode.COMPAT_1250_EXACT=Pre-1250 (exact)
 InsertContext.CompatibilityMode.COMPAT_1250=Pre-1250 (with even splitting)
 InsertContext.CompatibilityMode.COMPAT_1251=1251
 InsertContext.CompatibilityMode.COMPAT_1255=1255
+InsertContext.CompatibilityMode.COMPAT_1416=1416
 InsertFreesiteToadlet.title=Upload a freesite
 InsertFreesiteToadlet.content1=You can anonymously upload a web site to Freenet ("insert a Freesite"). Once it has been uploaded, it will remain on Freenet for as long as people continue to access it occasionally. It is distributed across the network and therefore also available if your computer is turned off. And the most important fact: If the security level of Freenet has been configured properly it should be very difficult to find out who has uploaded a Freesite.
 InsertFreesiteToadlet.contentFlogHelper=If you just want to create a simple blog, we recommend you use FlogHelper. You can load this on the ${plugins}plugins page${/plugins}, and then use it from the menu.
