Show JCA on stats page in advanced mode.

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -1826,6 +1826,8 @@ StatisticsToadlet.clientRequesters.realtimeFlag=Realtime Flag?
 StatisticsToadlet.clientRequesters.uri=URI
 StatisticsToadlet.count=Count
 StatisticsToadlet.cpus=Available CPUs: ${count}
+StatisticsToadlet.cryptoUsingBuiltin=Encryption: Using built-in code.
+StatisticsToadlet.cryptoUsingJCA=Encryption: Using JCA (${provider}).
 StatisticsToadlet.datasize=Data Size
 StatisticsToadlet.datastore=Datastore
 StatisticsToadlet.databaseJobsByPriority=Database jobs
