--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -1187,7 +1187,7 @@ NodeClientCore.useAIMDsBulkLong=Enable originator-level throttling of request st
 NodeIPDectector.inclLocalAddress=Include local addresses in noderef
 NodeIPDectector.inclLocalAddressLong=Whether to include local addresses (LAN and localhost) in node references. This will not be useful unless the both sides set allowLocalAddresses=true for the respective references (use the Friends page in advanced mode to set this flag).
 NodeIPDectector.ipOverride=IP address override
-NodeIPDectector.ipOverrideLong=IP address override (not usually needed) - set this if you have a *static* IP address or a domain name (e.g. via dyndns), and you are behind a firewall.
+NodeIPDectector.ipOverrideLong=IP address override (not usually needed) - set this if you have a *static* IP address or a domain name (e.g. via dyndns), and you are behind a firewall. Note that Freenet will still include other detected IP addresses unless you use the "bind to" option.
 NodeIPDectector.tempAddressHint=Temporary IP address hint
 NodeIPDectector.tempAddressHintLong=Temporary hint to what our IP might be; deleted after use
 NodeIPDetector.maybeSymmetric=It looks like your node may be behind a symmetric NAT. You may have connection problems: If you are behind a symmetric NAT you will probably only be able to connect to peers which are open to the internet.
