german translation update

--- a/src/freenet/l10n/freenet.l10n.de.properties
+++ b/src/freenet/l10n/freenet.l10n.de.properties
@@ -6,6 +6,7 @@ Announcer.announceDetails=Wir haben kürzlich ${recentSentAnnouncements} Bekannt
 Announcer.announceDisabledTooOld=Ihr Knoten scheint zu alt zu sein, um sich mit dem aktuellen Freenet-Netzwerk zu verbinden. Wir haben die Ankündigungen deaktiviert, da sie nichts bringen. Bitte aktualisieren Sie Ihren Knoten so bald wie möglich (die automatische Aktualisierung könnte auf Ihre Eingabe warten oder deaktiviert sein).
 Announcer.announceDisabledTooOldShort=Der Knoten hat versucht sich mit dem Netzwerk zu verbinden aber Ihre Version von Freenet ist zu alt. Sie sollten sie aktualisieren.
 Announcer.announceDisabledTooOldTitle=Ankündigungen deaktiviert (zu alt)
+Announcer.announceDisabledTooOldUpdateDisabled=Aktivieren Sie bitte Automatisches Update auf der ${config}Konfigurations-Seite${/config}.
 Announcer.announceLoading=Freenet lädt gerade die Seednodes (Start-Knoten)-Datei herunter, sodass es versuchen kann, sich im Rest des Netzwerks bekannt zu machen. Die Bekanntgabe kann ein paar Minuten dauern.
 Announcer.coolingOff=In den nächsten ${time} Sekunden wartet Ihr Knoten auf die Knoten, bei denen er sich gerade gemeldet hat, um sich zu verbinden. Wenn es nicht genügend Knoten sind, wird er es mit einem anderen Knoten versuchen.
 Announcer.dontKnowAddress=Freenet konnte bis jetzt noch nicht Ihre IP-Adresse feststellen. Wir können nicht nach fremden Knoten anfragen, bis wir die IP kennen.
@@ -94,6 +95,7 @@ BookmarkManager.listLong=Eine Liste von Lesezeichen von Freesites
 BookmarkManager.malformedBookmark=Ungültiges Lesezeichen
 Bookmarks.Defaults.Description.AFK=Ein Index von Freenet-Seiten mit Kategorien
 Bookmarks.Defaults.Description.FMS=Die offizielle Freesite von FMS, ein gegen Spam gefeites Diskussionsforen-System für Freenet
+Bookmarks.Defaults.Description.FSNG=Eine bebilderte Anleitung zum konfigurieren von Sozialen Netzwerken
 Bookmarks.Defaults.Description.Fniki=Ein älteres Wiki zur Freenet-Dokumentation
 Bookmarks.Defaults.Description.Freemail=Die offizielle Freesite von Freemail - Email über Freenet
 Bookmarks.Defaults.Description.FreesiteHOWTO=Eine genauere Erklärung zur Veröffentlichung von Webseiten (Freesites) in Freenet
@@ -112,6 +114,7 @@ Bookmarks.Defaults.Name.categoryIndexes=Verzeichnis von Webseiten in Freenet
 Bookmarks.Defaults.Name.categorySoftware=Freenet bezogene Software und Dokumentation
 Bookmarks.Defaults.ShortDescription.AFK=Freenet-Webseiten sortiert nach Kategorien
 Bookmarks.Defaults.ShortDescription.FMS=Diskussions-Foren über Freenet
+Bookmarks.Defaults.ShortDescription.FSNG=Soziale Netzwerke
 Bookmarks.Defaults.ShortDescription.Fniki=Älteres, auf Freenet basierendes Wiki
 Bookmarks.Defaults.ShortDescription.Freemail=Email über Freenet
 Bookmarks.Defaults.ShortDescription.FreesiteHOWTO=Eine andere Anleitung zum hochladen von Webseiten in Freenet
@@ -160,7 +163,7 @@ ConfigToadlet.console=Konsole
 ConfigToadlet.defaultIs=Standard-Wert: "${default}".
 ConfigToadlet.false=nein
 ConfigToadlet.fcp=FCP
-ConfigToadlet.fproxy=Web interface
+ConfigToadlet.fproxy=Web-Oberfläche
 ConfigToadlet.fullTitle=Freenet-Knoten-Konfiguration
 ConfigToadlet.logger=Logger
 ConfigToadlet.needRestart=Eine Einstellung benötigt einen Neustart, um in Kraft treten zu können. Bitte starten Sie den Knoten umgehend neu.
@@ -647,6 +650,7 @@ FileOffer.failedReceiveHeader=Die Übertragung der Datei ${filename} von ${node}
 FileOffer.failedReceiveShort=Die Übertragung der Datei ${filename} von ${node} ist fehlgeschlagen.
 FileOffer.failedReceiveTitle=Empfang der Datei fehlgeschlagen
 FileOffer.fileLabel=Datei:
+FileOffer.fileSavedToLabel=Gespeichert nach:
 FileOffer.mimeLabel=MIME-Typ:
 FileOffer.offeredFileHeader=Der Knoten ${name} hat eine Datei angeboten:
 FileOffer.offeredFileShort=Ihr Freund ${node} hat Ihnen die Datei ${filename} angeboten.
@@ -1122,9 +1126,10 @@ Node.showFriendsVisibilityAlertLong=Warnung "Bitte setzen Sie die Sichtbarkeits-
 Node.skipWrapperWarning=Die "Sie verwenden nicht den Wrapper"-Warnung nicht anzeigen?
 Node.skipWrapperWarningLong=Falls eingeschaltet, wird die Warnung: "Sie verwenden nicht den Wrapper" nicht angezeigt. Diese Einstellung wird erst beim nächsten Neustart wirksam.
 Node.slashdotCacheLifetime=Wie lange sollen Daten im Cache für kürzliche Anfragen aufbewahrt werden?
-Node.slashdotCacheLifetimeLong=Wie lange sollen Daten in dem Cache für kürzliche Anfragen zwischengespeichert werden (Millisekunden)? Beachten Sie, dass die Daten nach einem Neustart dennoch weg sind. Kann in Milisekunden oder mit dem Suffix "k" für Sekunden angegeben werden.
+Node.slashdotCacheLifetimeLong=Wie lange sollen Daten in dem Cache für kürzliche Anfragen zwischengespeichert werden (Millisekunden)? Beachten Sie, dass die Daten nach einem Neustart dennoch weg sind. Kann in Millisekunden oder mit dem Suffix "k" für Sekunden angegeben werden.
 Node.slashdotCacheSize=Maximale Größe des Caches für kürzliche Anfragen
 Node.slashdotCacheSizeLong=Maximalgröße des Caches für kürzliche Anfragen (Beachten Sie, dass es auch ein Zeitlimit gibt). Kann als Byte-Anzahl oder mit dem Suffix KiB, MiB, GiB für Kilo-/Mega-/Gigabyte angegeben werden.
+Node.slotFilterPersistenceTimeError=Slotfilter Speicherzeit muss -1, 0, oder eine positive Zahl sein.
 Node.storeBloomFilterCounting=Zählenden Bloomfilter verwenden?
 Node.storeBloomFilterCountingLong=Einen zählenden Bloomfilter (2 bit) verwenden? (Verändern Sie diese Einstellung nicht, falls Sie nicht wissen, was Sie bewirkt!)
 Node.storeBloomFilterSize=Bloomfilter-Größe (insgesamt) in Bytes
@@ -1138,6 +1143,8 @@ Node.storeSaltHashMigrated=Migration der Datenbank abgeschlossen! Wenn sie möch
 Node.storeSaltHashMigratedShort=Migration der Datenbank abgeschlossen!
 Node.storeSaltHashResizeOnStart=Verändere die Speichergröße beim Knotenstart (Nur beim salt-hash)
 Node.storeSaltHashResizeOnStartLong=Größenänderungen des Datenspeichers während dem Start des Knoten durchführen (nur salt-hash Datenbank). Falls dies eingeschaltet wird, so wird der Knoten Größenänderungen nicht im laufenden Betrieb durchführen, sondern das Starten verzögern, bis die Änderungen vollständig durchgeführt wurden. Dies wird wesentlich schneller gehen, als wenn der Knoten die Änderungen "online" durchführt, aber andererseits ist der Knoten währenddessen nicht verfügbar.
+Node.storeSaltHashSlotFilterPersistenceTime=Slotfilter zurückschreiben Zeitinterval
+Node.storeSaltHashSlotFilterPersistenceTimeLong=Wie oft sollen die Slotfilter zurückgeschrieben werden? -1 = sofortiges schreiben; 0 = schreiben beim shutdown; >0 = alle n Millisekunden schreiben, z.B. 60000 = jede Minute. Beachten Sie bitte, dass bei einem unsauberen shutdown von Freenet die Slotfilter beim nächsten Start neu aufgebaut werden müssen, falls nicht das sofortige schreiben aktiviert wurde. Ein Neuaufbau bedeutet ein sehr hohe Anzahl an Zugriffen auf die Festplatte. Kann in Millisekunden oder mit dem Suffix "k" für Sekunden angegeben werden.
 Node.storeSize=Speicher-Größe in Bytes
 Node.storeSizeLong=Größe des Freenet Datenspeichers (datastore). Dies ist neben Ihrer Bandbreite Ihre Spende zum Betrieb des Freenet: Ihr Freenet-Client wird diesen Speicher dem Freenet freigeben, um die von allen Freenet Nutzern hochgeladenen Dateien zu speichern. Der Inhalt des Speichers ist verschlüsselt, sodass Sie selbst nicht nachvollziehen können, welche Dateien Freenet dort zwischenspeichert. Sie müssen sich also keine Gedanken über deren moralische oder juristische Korrektheit machen, da der Speicher aus Ihrer Perspektive nicht entschlüsselbar ist. Kann als Byte-Anzahl oder mit dem Suffix KiB, MiB, GiB, TiB für Kilo-/Mega-/Giga-/Terabyte angegeben werden. (ACHTUNG: Beim Herunterladen von Dateien wird zum Zwischenspeichern zusätzlicher Speicherplatz benötigt und zwar mindestens doppelt soviel, wie die Gesamtgröße aller herunterzuladenden Dateien!)
 Node.storeType=Datenbank-Typ (ÄNDERN SIE DIES NICHT)
@@ -1281,6 +1288,12 @@ OpennetConnectionsToadlet.successTime=Letzter Zeitpunkt, zu dem ein erfolgreiche
 OpennetConnectionsToadlet.successTimeTitle=Letzter Erfolg
 OpennetManager.oneConnectionPerIP=Auf eine Verbindung pro IP-Adresse von Fremden beschränken?
 OpennetManager.oneConnectionPerIPLong=Nicht mehr als eine Verbindung zu Fremden pro IP-Adresse erlauben? Dies wird es Angreifern schwerer machen, sich mit mehreren Identitäten mit Ihnen zu verbinden, um Ihr Routing zu beherrschen oder das Einsammeln von Informationen zu erleichtern. Außerdem verhindert dies, das sich Ihr Knoten gleichzeitig als Freund und Fremder verbindet.
+OperatingSystemName.All=Ihr Betriebssystem
+OperatingSystemName.FreeBSD=FreeBSD
+OperatingSystemName.GenericUnix=UNIX
+OperatingSystemName.Linux=Linux
+OperatingSystemName.MacOS=MacOS
+OperatingSystemName.Windows=Windows
 PNGFilter.invalidHeader=Die Datei, die Sie versucht haben abzurufen, ist keine PNG-Datei. Sie enthält keinen gültigen PNG-Header (Dateikopf). Es könnte sich um ein anderes Dateiformat handeln und Ihr Browser könnte etwas gefährliches damit tun, deshalb wurde sie blockiert.
 PNGFilter.invalidHeaderTitle=Keine PNG-Datei - ungültiger Header
 PacketSender.somePeersDisconnectedBlockedTooLong=Wahrscheinlich ein Bug, bitte weiterleiten: Verbindung zu ${count} Partnern wurde zwangsweise beendet. Die Partner haben innerhalb von 10 Minuten so wenig Pakete beantwortet, dass wir ihnen keine neuen Pakete mehr senden können.
@@ -1300,6 +1313,8 @@ PeerManagerUserAlert.noPeersTestnet=Ihr Knoten hat keine Partner, mit denen er s
 PeerManagerUserAlert.noPeersTitle=Keine Freunde gefunden
 PeerManagerUserAlert.oneConn=Ihr Knoten hat nur eine Verbindung zu einem Partner. Die Leistung wird beeinträchtigt sein und Sie haben weder Anonymität noch können Sie glaubwürdig etwas abstreiten, wenn diese Person böswillig ist. Ihr Knoten ist wie ein "Blatt an einem Ast" mit dem Netzwerk verbunden und trägt nicht zur Gesundheit des Netzwerks bei. Versuchen Sie zu jedem Zeitpunkt mindestens 3 (im Idealfall mehr, etwa 5-10) verbundene Partner zu bekommen.
 PeerManagerUserAlert.onlyFewConnsTitle=Nur ${count} offene Verbindung(en)
+PeerManagerUserAlert.outdatedUpdate=Freenet scheint nicht auf dem aktuellsten Stand zu sein und könnte nicht richtig arbeiten, solange Sie es nicht aktualisieren. Freenet kann sich automatisch selbst aktualisieren indem es die neueste Version von anderen Freenet-Knoten herunterlädt. Diese Option ist aber im Moment abgeschaltet. Aktivieren Sie bitte diese Option auf der Konfigurations-Seite Konfiguration/Knoten.Updater. Es kann 1 oder 2 Stunden dauern, bis die Aktualisierung abgeschlossen sein wird. Eine andere Möglichkeit zur Aktualisierung ist die Verwendung der Skripte update.sh oder update.cmd. Das wird aber nicht empfohlen und ist auch weniger sicher.
+PeerManagerUserAlert.outdatedUpdateTitle=Freenet muß aktualisiert werden! Bitte aktivieren Sie den automatischen Update auf der Konfigurations-Seite Konfiguration/Knoten.Updater.
 PeerManagerUserAlert.tooHighBwlimitDelayTime=Ihr Knoten muss zu lange auf verfügbare Bandbreite warten (${delay}ms > ${max}ms). Erhöhen Sie ihre ausgehende Bandbreite und/oder entfernen Sie einige Partner (von der Freundes-Liste) um die Situation zu verbessern.
 PeerManagerUserAlert.tooHighBwlimitDelayTimeTitle=Netzwerk-Bandbreitengrenzwert-Verzögerungszeit (bwlimitDelayTime) zu hoch
 PeerManagerUserAlert.tooHighPingTime=Ihr Knoten hat Schwierigkeiten schnell genug mit seinen Partnern zu kommunizieren (${ping}ms > ${max}ms). Ihre ausgehende Bandbreiten-Begrenzung könnte zu klein sein, dann erhöhen Sie sie bitte. Sie könnte auch zu hoch sein, in diesem Fall verringern Sie sie bitte. Normalerweise sollten Sie Freenet nicht mehr als die Hälfte Ihrer maximalen ausgehenden Bandbreite zugestehen. Das Problem könnte auch durch eine zu hohe Prozessor-Last, exessives Swapping (schreiben/lesen der Auslagerungsdatei/-partition) oder aber durch Netzwerkprobleme, die nicht durch Freenet bedingt sind, verursacht werden. Es könnte möglicherweise auch an Fehler im Freenet-Programmcode liegen. Sie sollten versuchen dieses Problem zu lösen, weil Freenet sonst nur sehr schlecht laufen wird.
@@ -1679,6 +1694,7 @@ SecurityLevels.physicalThreatLevelEnd=Sie sollten den folgenden standardmäßige
 SecurityLevels.physicalThreatLevelShort=Sicherheitslevel für Situationen, in denen der Computer beschlagnahmt oder gestohlen wird
 SecurityLevels.physicalThreatLevelSwapfile=Wir empfehlen dringend, die Festplatte zu verschlüsseln, z.B. mit ${truecrypt}Truecrypt${/truecrypt}. Dann kann als Sicherheitslevel NIEDRIG gewählt werden. Falls Sie das nicht tun möchten, sollte ein höherer Sicherheitslevel ausgewählt werden. Dann sollte aber zumindest das Swapping abgeschaltet werden oder das Swapfile/Swappartition verschlüsselt werden.
 SecurityLevels.physicalThreatLevelSwapfileWindows=Bei einigen Windows-Versionen kann es mit diesem Kommando erreicht werden: "fsutil behavior set encryptpagingfile 1".
+SecurityLevels.physicalThreatLevelTruecrypt=Wir empfehlen Ihnen dringend, Ihre Festplatte mit z.B. ${truecrypt}Truecrypt${/truecrypt} zu verschlüsseln. Das bietet den besten Schutz, insbesondere wenn Sie Programme und Plugins von anderen Anbietern verwenden, wie z.B. Sone oder FMS. Natürlich nimmt das einrichten einer verschlüsselten Festplatte etwas Zeit in Anspruch. Ansonsten könnte man ein Passwort vergeben für die Downloads, Uploads und den Cache für kürzlich besuchte Freesites.
 SecurityLevels.setPassword=Bitte setzen Sie das Masterpasswort, das benutzt werden soll, um die zwischengespeicherten Inhalte zu schützen. Je stärker das Passwort, desto stärker der Schutz: Am besten sind viele Buchstaben, Zahlen und Satzzeichen gemischt.
 SecurityLevels.setPasswordLabel=Setzen Sie das Passwort:
 SecurityLevels.setPasswordTitle=Passwort setzen
@@ -1786,6 +1802,8 @@ SimpleToadletServer.panicButton=Den Alarm-Knopf anzeigen?
 SimpleToadletServer.panicButtonLong=Zeigt einen "Alarm-Knopf" auf der Warteschlangen-Seite an, welcher alle Down- und Uploads, den Zwischenspeicher für kürzlich besuchte Freesites und die Datei "master.keys" entfernt.
 SimpleToadletServer.passthroughMaxSize=Maximale Größe für das transparente Durchreichen über die Webschnittstelle
 SimpleToadletServer.passthroughMaxSizeLong=Maximale Größe einer Datei für das transparente Durchreichen über die Webschnittstelle. Bei größeren Dateien werden Sie zuerst gefragt, ob die Datei an den Browser übergeben oder zur Download-Liste hinzugefügt werden soll.
+SimpleToadletServer.passthroughMaxSizeProgress=Maximale Größe für das transparente Durchreichen in der Web-Oberfläche, auf der wir einen Fortschritts-Balken zeigen (z.B. für HTML-Seiten)
+SimpleToadletServer.passthroughMaxSizeProgressLong=Maximale Größe einer HTML-Seite oder einer Datei für die wir einen Fortschritts-Balken zeigen können. Falls die Datei größer ist, werden Sie gefragt, ob Sie die Datei im Hintergrund herunterladen wollen, z.B. in ihren Download-Ordner.
 SimpleToadletServer.port=Port der Webschnittstelle
 SimpleToadletServer.portLong=Der TCP-Port, auf dem die Webschnittstelle Nachrichten empfangen soll
 SimpleToadletServer.publicGatewayMode="Öffentlicher Zugangsknoten"-Modus? (Betrifft nur erlaubte Verbindungen ohne Vollzugriff.)
@@ -2027,6 +2045,7 @@ UpdatedVersionAvailableUserAlert.shortReadyNotArmed=Ihr Knoten hat eine neue Ver
 UpdatedVersionAvailableUserAlert.title=Eine neue stabile Version von Freenet ist verfügbar
 UpdatedVersionAvailableUserAlert.updateASAPButton=Sobald wie möglich aktualisieren
 UpdatedVersionAvailableUserAlert.updateASAPQuestion=Möchten Sie, dass der Knoten automatisch neustartet, sobald er die Aktualisierung heruntergeladen hat?
+UpdatedVersionAvailableUserAlert.updateIsUrgent=Bitte aktualisieren Sie Ihren Knoten sehr bald, ansonsten könnte Ihr Knoten nicht mehr in der Lage sein, sich zu anderen Knoten zu verbinden.
 UpdatedVersionAvailableUserAlert.updateNowButton=Jetzt aktualisieren!
 UserAlert.apply=Übernehmen
 UserAlert.hide=Verstecken
