Change GCJ warning to advise to install OpenJDK.

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -1079,9 +1079,6 @@ Node.failedToRenameDecryptingTitle=Failed to rename the downloads queue database
 Node.failedToRenameDecrypting=The node was unable to rename the downloads queue database from ${fromfile} to ${tofile} while decrypting it. The downloads database is not accessible until you rename it manually.
 Node.maxPacketSize=Maximum packet size (aka MTU)
 Node.maxPacketSizeLong=Maximum size of the UDP packets Freenet sends, assuming UDP/IP headers are 28 bytes. We will use the MTU of the interface if we can detect it, but mostly obstructions happen elsewhere, and unfortunately we cannot easily detect the path MTU.
-Node.notUsingSunVMTitle=Not using a Sun/Oracle Java
-Node.notUsingSunVM=You are trying to run Freenet under a non-Sun/Oracle Java: ${vendor} ${version} (${name}). This is not recommended: Freenet may not run well. Please get Sun/Oracle Java from http://www.java.com/getjava/ if possible.
-Node.notUsingSunVMShort=Freenet is running on a non-Sun/Oracle Java, this is not recommended, please get the latest Sun/Oracle Java.
 Node.notUsingWrapperTitle=Not using the wrapper!
 Node.notUsingWrapper=You are running Freenet without the wrapper. This is not recommended. Freenet will not be able to restart itself, so auto-updating won't work, and if Java crashes, it won't get restarted either. Also Freenet can't generate stack dumps in some places so debugging will be marginally harder.
 Node.notUsingWrapperShort=Freenet is running without the wrapper. This is not recommended.
@@ -1144,6 +1141,8 @@ Node.tooSmallMTULong=Your connection's MTU appears to be ${mtu} bytes. Freenet w
 Node.tooSmallMTUShort=Connection problems: Your connection's MTU is too short for Freenet to work well. Expect problems.
 Node.useSlashdotCache=Cache all requests for 30 minutes?
 Node.useSlashdotCacheLong=Requests with high HTL are not eligible to be stored in the datastore. If this option is true, they will be stored in the recent requests cache, a special short-term cache. If this option is false then only ULPR responses (i.e. delayed answers to requests) will be stored in this cache. This is enabled by default unless network security level is MAXIMUM, as it is important for performance when a key becomes popular suddenly. However, it does have some security impact, in that if an attacker can get close to the target within 30 minutes (unlikely in most cases), this mechanism may help him to confirm his guesses.
+Node.usingGCJTitle=Running Freenet under GCJ is not recommended
+Node.usingGCJ=You are running Freenet under GCJ (a free Java compiler). This is buggy and likely to cause problems. We recommend switching to OpenJDK (which is also free, and less likely to have odd bugs).
 Node.withAnnouncement=Allow Freenet to bootstrap itself using seednodes? (Leave this alone unless you know what you're doing)
 Node.withAnnouncementLong=Allow your Freenet node to bootstrap itself using seednodes? To get onto the opennet (the Strangers network, automatic Freenet connection on low/normal network security level), we contact public nodes chosen from a small list shipped with Freenet. Obviously this is somewhat insecure, but if you are using opennet, you probably need it: if your node is down for a while, especially if it is NATed and/or changes its IP address, it will probably need to reseed. If you want better security, you need to connect to your friends and enable high network security.
 Node.writeLocalToDatastore=Write local and nearby requests to the datastore?
