--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -1474,7 +1474,7 @@ QueueToadlet.confirmDeleteTitle=Are you sure you want to delete this file?
 QueueToadlet.confirmDelete=Do you want to delete this file from Freenet's encrypted temporary space? It may take some time to re-download it if you change your mind later.
 QueueToadlet.deleteFileFromTemp=DELETE FILE
 QueueToadlet.deleteFilesFromTemp=DELETE FILES
-QueueToadlet.disableFilter=Disable content filter
+QueueToadlet.disableFilter=Yes I want to download potentially unsafe content (${type})!
 QueueToadlet.dontCompressInCompatCell=don't compress
 QueueToadlet.download=Download
 QueueToadlet.downloadDisallowed=Downloading to "${directory}" is disallowed by your settings.
