Show a different message if the store is being migrated to slot filters (i.e. the filters are new) vs it's just dirty.

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -1444,9 +1444,11 @@ PproxyToadlet.unloadPluginWithName=Are you sure you wish to unload ${name}?
 PproxyToadlet.unloadPurge=Remove plugin from cache
 PproxyToadlet.versionTitle=Version
 SaltedHashFreenetStore.shortResizeProgress=Datastore(${name}) resize in progress: ${processed}/${total}
-SaltedHashFreenetStore.shortRebuildProgress=Datastore(${name}) maintenance in progress: ${processed}/${total}
+SaltedHashFreenetStore.shortRebuildProgressNew=Datastore(${name}) maintenance in progress: ${processed}/${total} (converting to new format)
+SaltedHashFreenetStore.shortRebuildProgress=Datastore(${name}) maintenance in progress: ${processed}/${total} (after an unclean shutdown)
 SaltedHashFreenetStore.longResizeProgress=Datastore(${name}) resize in progress: ${processed}/${total}. Freenet may be a little bit slower than usual during the process. Avoid restarting Freenet during this if you do not want to lose the progress.
-SaltedHashFreenetStore.longRebuildProgress=Datastore(${name}) maintenance in progress: ${processed}/${total}. We have changed the datastore so that it will cause less load on your computer (particularly disk accesses), but we have to rebuild the indexes first, which will be quite heavy for some time depending on the size of your datastore. Your Freenet node will be slower than usual during the process. Avoid restarting the node during this if you do not want to lose the progress.
+SaltedHashFreenetStore.longRebuildProgressNew=Datastore(${name}) maintenance in progress: ${processed}/${total}. We have changed the datastore so that it will cause less load on your computer (particularly disk accesses), but we have to rebuild the indexes first, which will be quite heavy for some time depending on the size of your datastore. Your Freenet node will be slower than usual during the process. Avoid restarting the node during this if you do not want to lose the progress.
+SaltedHashFreenetStore.longRebuildProgress=Datastore(${name}) maintenance in progress: ${processed}/${total}. Freenet is rebuilding the "slot filter" index for your datastore, probably because Freenet did not shut down properly at some point. This allows Freenet to access the disk a lot less, but rebuilding the indexes will involve some extra disk access for some time, depending on the size of your datastore. Your Freenet node may be slower than usual during this process, please avoid restarting Freenet.
 SaltedHashFreenetStore.cleanerAlertTitle=Datastore maintenance running
 QueueToadlet.awaitingCompression=Waiting
 QueueToadlet.awaitingPasswordTitleDownloads=Password required to access the download queue
