Public gateway mode now needs a restart; also update related l10n.

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -1730,7 +1730,7 @@ SimpleToadletServer.advancedModeLong=Enables display of advanced options and inf
 SimpleToadletServer.allowedFullAccess=Hosts having a full access to the Freenet web interface (read warning)
 SimpleToadletServer.allowedFullAccessLong=Hosts granted full access (i.e. change config settings, restart, etc) to your Freenet node. WARNING: Be very careful who you give full web interface access to!
 SimpleToadletServer.allowedHosts=Hostnames or IP addresses that are allowed to connect to the web interface.
-SimpleToadletServer.allowedHostsLong=May be a comma-separated list of single IPs and CIDR masked IPs like 192.168.0.0/24. Note that these can access the hard disk within the limits set by other config options.
+SimpleToadletServer.allowedHostsLong=May be a comma-separated list of single IPs and CIDR masked IPs like 192.168.0.0/24. Note that these can access the hard disk within the limits set by other config options. They can also see your bookmarks.
 SimpleToadletServer.bindTo=IP address to bind to
 SimpleToadletServer.bindToLong=IP address to bind to
 SimpleToadletServer.cannotChangePortOnTheFly=Cannot change web interface port number on the fly
@@ -1780,7 +1780,8 @@ SimpleToadletServer.passthroughMaxSizeProgressLong=Maximum size of an HTML page 
 SimpleToadletServer.port=Web interface port
 SimpleToadletServer.portLong=The TCP port the web interface should listen on
 SimpleToadletServer.publicGatewayMode=Public gateway mode? (Only applies to allowed but non-full-access connections)
-SimpleToadletServer.publicGatewayModeLong=Should we enable public gateway mode? For IPs which are allowed to access Freenet, but are not allowed full access, this option disables the download queue and anything else that might conceivably be abused to attack the Freenet node, while still allowing browsing freesites. IP addresses with full access will be allowed to configure the node.
+SimpleToadletServer.publicGatewayModeLong=Should we enable public gateway mode? For IPs which are allowed to access Freenet, but are not allowed full access, this option disables the download queue and anything else that might conceivably be abused to attack the Freenet node, while still allowing browsing freesites. They will also only see the default bookmarks, not your bookmarks. IP addresses with full access will be allowed to configure the node.
+SimpleToadletServer.publicGatewayModeNeedsRestart=Enabling public gateway mode requires that you restart Freenet. Until then, it will not apply, so you should not change your other fproxy settings.
 SimpleToadletServer.refilterPolicy=What should fproxy do when a downloaded file matches the key being fetched, but it has already been filtered?
 SimpleToadletServer.refilterPolicyLong=What should fproxy do when a downloaded file matches the key being fetched, but it has already been filtered? RE_FILTER = filter it anyway, since the filter may have been improved since the original download, ACCEPT_OLD = accept the old data (maximum performance), RE_FETCH = ignore the old data.
 SimpleToadletServer.sendAllThemes=Send all themes to browser?
