--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -470,8 +470,7 @@ FirstTimeWizardToadlet.bandwidthUploadHeader=Upload limit
 FirstTimeWizardToadlet.bandwidthSelect=Select
 FirstTimeWizardToadlet.bandwidthPerSecond=/s
 FirstTimeWizardToadlet.bandwidthMonthlyNetTransfer=Monthly Net Transfer
-FirstTimeWizardToadlet.bandwidthCouldNotParse=Unable to parse limit "${limit}", please try again.
-FirstTimeWizardToadlet.bandwidthCouldNotParseTitle=Parsing Error
+FirstTimeWizardToadlet.bandwidthErrorSettingTitle=Error Setting Bandwidth Limit
 FirstTimeWizardToadlet.browserWarningPageTitle=Browser Security Advisory
 FirstTimeWizardToadlet.browserWarningShort=You must use a separate browser (or a browser with privacy/incognito mode) for Freenet!
 FirstTimeWizardToadlet.browserWarningShortRelativelySafe=You could use privacy mode or a separate browser to improve security
