Specify whether a restriction is on up or down.

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -986,11 +986,11 @@ Node.assumeNATed=Assume the port is not forwarded.
 Node.assumeNATedLong=Should Freenet assume the port is NATed and not forwarded, and always send handshakes aggressively (every 10-30 seconds), regardless of any evidence to the contrary?
 Node.autoChangeDatabaseEncryption=Automatically encrypt or decrypt node.db4o on restarting the node?
 Node.autoChangeDatabaseEncryptionLong=Automatically encrypt or decrypt node.db4o on restart (or on first entering the password) if the security level has changed? (It is encrypted unless physical security level is LOW). This can take some time during startup, but if it is disabled, you will have to shut down Freenet, remove node.db4o(.crypt), and start it back up to change whether it is encrypted, which will wipe out your downloads/uploads queue.
-Node.bandwidthLimitMustBePositiveOrMinusOne=Bandwidth limit must be positive or -1
+Node.bandwidthLimitMustBePositiveOrMinusOne=Download bandwidth limit must be positive or -1.
 Node.bandwidthMinimum=The requested bandwidth limit of ${limit} bytes/second is too low. Bandwidth limits must be at least ${minimum} bytes/second because lower limits than this cannot properly connect to the network.
 Node.bindTo=IP address to bind to
 Node.bindToLong=IP address to bind to
-Node.bwlimitMustBePositive=Bandwidth limit must be positive
+Node.bwlimitMustBePositive=Upload bandwidth limit must be positive.
 Node.clientCacheType=Client cache type?
 Node.clientCacheTypeLong=If you set this to none there will be less evidence if your computer is seized, but your node will need to re-fetch every page you visit every time you visit it, reducing performance and making your requests more visible on the network; if you set it to ram, cached pages will only be remembered until shutting down this Freenet node and will take up RAM; the first-time wizard sets it to salt-hash, which stores visited freesites on disk, but encrypted and possibly passworded according to the physical security level (so securely deleting master.keys will wipe the client cache).
 Node.clientCacheSize=Size of the client cache? (bytes, MB, GB etc allowed)
