Throw when given an extremely low bandwidth limit.

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -988,6 +988,7 @@ Node.assumeNATedLong=Should Freenet assume the port is NATed and not forwarded, 
 Node.autoChangeDatabaseEncryption=Automatically encrypt or decrypt node.db4o on restarting the node?
 Node.autoChangeDatabaseEncryptionLong=Automatically encrypt or decrypt node.db4o on restart (or on first entering the password) if the security level has changed? (It is encrypted unless physical security level is LOW). This can take some time during startup, but if it is disabled, you will have to shut down Freenet, remove node.db4o(.crypt), and start it back up to change whether it is encrypted, which will wipe out your downloads/uploads queue.
 Node.bandwidthLimitMustBePositiveOrMinusOne=Bandwidth limit must be positive or -1
+Node.bandwidthMinimum=The requested bandwidth limit of ${limit} bytes/second is too low. Bandwidth limits must be at least ${minimum} bytes/second because lower limits than this cannot properly connect to the network.
 Node.bindTo=IP address to bind to
 Node.bindToLong=IP address to bind to
 Node.bwlimitMustBePositive=Bandwidth limit must be positive
